--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <script type="text/javascript" src="foo.js"></script>
+    <script type="text/javascript" src="CowsAndBulls.js"></script>
     <script>
         let secret;
         let wordLength;
